deps/v8/test/message/fail/strict-octal-string.out
*%(basename)s:32: SyntaxError: Octal escape sequences are not allowed in strict mode.
  var x = "hello\040world";
                 ^^
SyntaxError: Octal escape sequences are not allowed in strict mode.
